update .env.example to use latest variables

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-DATABASE_URL=
-OPENAI_API_KEY=
+NODE_ENV=development
+PORT=3001
+DATABASE_URL=your_db_url
+OPENAI_API_KEY=your_openai_api_key_here
+CORS_ORIGIN=http://localhost:3000
