--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "seed": "ts-node prisma/seed.ts",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "type-check": "tsc --noEmit"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -20,7 +26,8 @@
     "cors": "2.8.5",
     "dotenv": "17.2.1",
     "express": "5.1.0",
-    "openai": "5.12.2"
+    "openai": "5.12.2",
+    "zod": "3.25.76"
   },
   "devDependencies": {
     "@types/cors": "2.8.19",
